# FastAPI-Wallets

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/backend/: .env  db.py  db_depends.py  settings.py
app/models/: wallet.py
app/routers/: wallets.py
migrations/: env.py
migrations/versions/: f536a89d2526_create_wallets_table.py
tests/: test_wallets.py
